remove point check, change target value to target_drops

--- a/QuestTemplates/daily-template/package.yml
+++ b/QuestTemplates/daily-template/package.yml
@@ -23,10 +23,6 @@ variables:
   ################
   ## Conditions ##
   ################
-  hasLevel2DailyExp: 'point daily.questexp 25'
-  hasLevel3DailyExp: 'point daily.questexp 50'
-  hasLevel4DailyExp: 'point daily.questexp 100'
-  hasLevel5DailyExp: 'point daily.questexp 200'
   startQuestCheck: 'and !daily.$type_lower$Active'
   collectTaken: tag collect_taken
   collectComplete: tag collect_complete
@@ -66,8 +62,8 @@ variables:
   collectWhisper: 'notify &e&o$action_upper$ &a&o$objective_amount$ &e&o$target$ from the &a&o$world_display$ &e&oworld... io:subtitle'
   collectStartNotice: 'notify &b&oObjective: &e&oThe Oracle asked you to \n&e&o$action_lower$ &a&o$objective_amount$ &e&o$target$ from the &a&o$world_display$ &e&oworld. category:daily_task'
   
-  shrineWhisper: 'notify &e&oPlace &a&o$objective_amount$ &e&o$target$ in the &d&oshrine &e&oat spawn... io:subtitle'
-  shrineStartNotice: 'notify &b&oObjective: &e&oThe Oracle asked you to \n&e&oplace &a&o$objective_amount$ &e&o$target$ in the &d&oshrine &e&oat spawn. category:daily_task'
+  shrineWhisper: 'notify &e&oPlace &a&o$objective_amount$ &e&o$target_drops_plural$ in the &d&oshrine &e&oat spawn... io:subtitle'
+  shrineStartNotice: 'notify &b&oObjective: &e&oThe Oracle asked you to \n&e&oplace &a&o$objective_amount$ &e&o$target_drops_plural$ in the &d&oshrine &e&oat spawn. category:daily_task'
   
   finishWhisper: 'notify &e&oThe Oracle acknowledges your dedication... io:subtitle'
   finishNotice: 'notify &2Your daily quests reward\:\n+ $$reward_amount$ category:daily_task'
