--- a/QuestPackages/daily/mining/iron/package.yml
+++ b/QuestPackages/daily/mining/iron/package.yml
@@ -6,24 +6,24 @@ variables:
 
   objective_amount: 16
   reward_amount: 2500
-  
-  world: The_Ark_nether
-  world_display: Nether
+
+  world: Mining
+  world_display: Mining
 
   action_upper: Mine
   action_lower: mine
   action_lower_past: mined
   
-  target: quartz ore
-  target_upper: QuartzOre
+  target: iron ore
+  target_upper: Iron ore
   
-  target_drops: quartz
+  target_drops: raw iron
   target_drops_plural: raw iron
   
-  target_slug: nether_quartz_ore
+  target_slug: iron_ore
 
 ## Due to limitations, slug value must match item key
-  target_drops_slug: quartz
+  target_drops_slug: raw_iron
 
 items:
-  quartz: minecraft:$target_drops_slug$
+  raw_iron: minecraft:$target_drops_slug$
