--- a/QuestPackages/daily/mining/quartz/package.yml
+++ b/QuestPackages/daily/mining/quartz/package.yml
@@ -6,24 +6,24 @@ variables:
 
   objective_amount: 16
   reward_amount: 2500
-
-  world: Mining
-  world_display: Mining
+  
+  world: The_Ark_nether
+  world_display: Nether
 
   action_upper: Mine
   action_lower: mine
   action_lower_past: mined
   
-  target: iron ore
-  target_upper: IronOre
+  target: quartz ore
+  target_upper: Quartz ore
   
-  target_drops: raw iron
+  target_drops: quartz
   target_drops_plural: raw iron
   
-  target_slug: iron_ore
+  target_slug: nether_quartz_ore
 
 ## Due to limitations, slug value must match item key
-  target_drops_slug: raw_iron
+  target_drops_slug: quartz
 
 items:
-  raw_iron: minecraft:$target_drops_slug$
+  quartz: minecraft:$target_drops_slug$
