--- a/QuestPackages/daily/mobkill/cow/package.yml
+++ b/QuestPackages/daily/mobkill/cow/package.yml
@@ -14,17 +14,17 @@ variables:
   action_lower: kill
   action_lower_past: killed
   
-  target: creepers
-  target_upper: Creepers
-  target_all_caps: CREEPER
+  target: cow
+  target_upper: Cow
+  target_all_caps: COW
   
-  target_drops: gunpowder
-  target_drops_plural: gunpowder
+  target_drops: cooked beef
+  target_drops_plural: cooked beef
   
-  target_slug: creeper
+  target_slug: cow
   
   ## Due to limitations, slug value must match item key
-  target_drops_slug: gunpowder
+  target_drops_slug: cooked_beef
   
 items:
-  gunpowder: minecraft:$target_drops_slug$
+  cooked_beef: minecraft:$target_drops_slug$
