--- a/QuestPackages/daily/mobkill/husk/package.yml
+++ b/QuestPackages/daily/mobkill/husk/package.yml
@@ -14,17 +14,17 @@ variables:
   action_lower: kill
   action_lower_past: killed
   
-  target: creepers
-  target_upper: Creepers
-  target_all_caps: CREEPER
+  target: husks
+  target_upper: Husks
+  target_all_caps: HUSK
   
-  target_drops: gunpowder
-  target_drops_plural: gunpowder
+  target_drops: rotten flesh
+  target_drops_plural: rotten flesh
   
-  target_slug: creeper
+  target_slug: zombie
   
   ## Due to limitations, slug value must match item key
-  target_drops_slug: gunpowder
+  target_drops_slug: rotten_flesh
   
 items:
-  gunpowder: minecraft:$target_drops_slug$
+  rotten_flesh: minecraft:$target_drops_slug$
