--- a/QuestPackages/daily/mobkill/sheep/package.yml
+++ b/QuestPackages/daily/mobkill/sheep/package.yml
@@ -14,17 +14,17 @@ variables:
   action_lower: kill
   action_lower_past: killed
   
-  target: creepers
-  target_upper: Creepers
-  target_all_caps: CREEPER
+  target: sheep
+  target_upper: Sheep
+  target_all_caps: SHEEP
   
-  target_drops: gunpowder
-  target_drops_plural: gunpowder
+  target_drops: cooked mutton
+  target_drops_plural: cooked mutton
   
-  target_slug: creeper
+  target_slug: sheep
   
   ## Due to limitations, slug value must match item key
-  target_drops_slug: gunpowder
+  target_drops_slug: cooked_mutton
   
 items:
-  gunpowder: minecraft:$target_drops_slug$
+  cooked_mutton: minecraft:$target_drops_slug$
