--- a/QuestPackages/daily/mobkill/squid/package.yml
+++ b/QuestPackages/daily/mobkill/squid/package.yml
@@ -14,17 +14,17 @@ variables:
   action_lower: kill
   action_lower_past: killed
   
-  target: creepers
-  target_upper: Creepers
-  target_all_caps: CREEPER
+  target: squid
+  target_upper: Squid
+  target_all_caps: SQUID
   
-  target_drops: gunpowder
-  target_drops_plural: gunpowder
+  target_drops: ink sac
+  target_drops_plural: ink sacs
   
-  target_slug: creeper
+  target_slug: squid
   
   ## Due to limitations, slug value must match item key
-  target_drops_slug: gunpowder
+  target_drops_slug: ink_sac
   
 items:
-  gunpowder: minecraft:$target_drops_slug$
+  ink_sac: minecraft:$target_drops_slug$
